--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;800&display=swap" rel="stylesheet">
   <!-- Nunito Font -->
 
-  <title>Vite + React</title>
+  <title>Zynor</title>
 </head>
 
 <body>
